force-app/main/default/objects/Asset/fields/DSales_Fecha_compra__c.field-meta.xml
<CustomField>
    <fullName>DSales_Fecha_compra__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de compra</label>
    <type>Date</type>
</CustomField>