force-app/main/default/objects/Asset/fields/DSales_Informacion_pago__c.field-meta.xml
<CustomField>
    <fullName>DSales_Informacion_pago__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Información de pago</label>
    <referenceTo>DSALES_InformacionDePago__c</referenceTo>
    <relationshipLabel>Productos Adquiridos</relationshipLabel>
    <relationshipName>Productos_Adquiridos</relationshipName>
    <type>Lookup</type>
</CustomField>