force-app/main/default/objects/Asset/fields/DSALES_Region__c.field-meta.xml
<CustomField>
    <fullName>dsalesRegion__c</fullName>
    <label>Región</label>
    <length>255</length>
    <type>Text</type>
</CustomField>