force-app/main/default/objects/Asset/fields/dsalesAR__c.field-meta.xml
<CustomField>
    <fullName>dsalesAR__c</fullName>
    <description>Campo para identificar el AR del producto tangible</description>
    <formula>Product2.dsalesAR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>