force-app/main/default/objects/Asset/recordTypes/DSALES_Garantia_Extendida.recordType-meta.xml
<RecordType>
    <fullName>DSALES_Garantia_Extendida</fullName>
    <active>true</active>
    <description>Tipo de registro para Garantía Extendida</description>
    <label>Garantia Extendida</label>
</RecordType>