force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.PRICE</columns>
    <columns>DSALES_Oportunidad__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los productos adquiridos</label>
</ListView>